--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Courier+Prime&display=swap");
+
+body {
+  font-family: "Courier Prime", sans-serif;
+}
+
 .labels text {
   padding: 0.5rem 1rem;
   fill: #aaa;
