--- a/style.css
+++ b/style.css
@@ -4,6 +4,21 @@ body {
   font-family: "Courier Prime", sans-serif;
 }
 
+h1 {
+  display: inline;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#name,
+#info {
+  text-align: center;
+}
+
 .labels text {
   padding: 0.5rem 1rem;
   fill: #aaa;
@@ -35,8 +50,4 @@ body {
   pointer-events: all;
   stroke: none;
   stroke-width: 40px;
-}
-
-h1 {
-  display: inline;
 }
